[package]
name = "hyper-client-util"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures-preview = "0.3.0-alpha.18"
headers = "0.2"
http = "0.1"
hyper = { git = "https://github.com/hyperium/hyper" }
hyper-tls = { git = "https://github.com/hyperium/hyper-tls" }
log = "*"
serde = "1"
serde_json = "1"
