[package]
name = "hyper-client-util"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"

[dependencies]
failure = "0.1"
futures-preview = "0.3.0-alpha"
headers = "0.2"
http = "0.1"
hyper = { version = "0.13.0-alpha", features = ["unstable-stream"] }
hyper-tls = "0.4.0-alpha"
log = "0.4"
serde = "1"
serde_json = "1"
